support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_missing_rbrace.stderr
c_missing_rbrace.i:3: Error: Missing '}'. Reached end of input.
c_missing_rbrace.i:3: Error: Syntax error in input(1).
